--- a/composer.json
+++ b/composer.json
@@ -10,23 +10,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
-        "barryvdh/laravel-dompdf": "^0.8.5",
+        "php": "^8.0.2",
+        "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0",
+        "laravel/framework": "^9.0",
+        "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.0",
         "nesbot/carbon": "^2.28"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
-        "facade/ignition": "^1.4",
+        "spatie/laravel-ignition": "^1.0",
         "fzaninotto/faker": "^1.4",
-        "laravel/ui": "^1.1",
+        "laravel/ui": "^3.0",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -43,7 +43,7 @@
             "App\\": "app/"
         },
         "classmap": [
-            "database/seeds",
+            "database/seeders",
             "database/factories"
         ]
     },
