--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ckeditor/ckeditor5-build-classic": "^15.0.0",
         "@ckeditor/ckeditor5-vue": "^1.0.0",
         "bootstrap-select": "^1.13.12",
+        "glob-parent": "^5.1.2",
         "vue-dynamic-select": "^1.0.16"
     }
 }
