--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
+        "innocenzi/laravel-vite": "0.2.*",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.0",
