--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
@@ -21,6 +21,7 @@
         "sass": "^1.20.1",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
+        "vue-loader": "^15.10.0",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
@@ -28,6 +29,7 @@
         "@ckeditor/ckeditor5-vue": "^1.0.0",
         "bootstrap-select": "^1.13.12",
         "glob-parent": "^5.1.2",
-        "vue-dynamic-select": "^1.0.16"
+        "vue-dynamic-select": "^1.0.16",
+        "webpack": "^5.74.0"
     }
 }
