--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "popper.js": "^1.12",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.20.1",
-        "sass-loader": "7.*",
+        "sass-loader": "^13.2.2",
         "vue": "^2.5.17",
         "vue-loader": "^15.10.0",
         "vue-template-compiler": "^2.6.10"
