--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.0",
-        "nesbot/carbon": "^2.28"
+        "nesbot/carbon": "^2.28",
+        "thiagoalessio/tesseract_ocr": "^2.13"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
